Need to group things that aren't directly connected

--- a/checkerboard.ipynb
+++ b/checkerboard.ipynb
@@ -9,7 +9,9 @@
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "import random"
    ]
   },
   {
@@ -29,13 +31,142 @@
     }
    ],
    "source": [
-    "# img1 = cv2.imread(os.path.relpath('data/boards/black_board_difficult_corners.jpg'), cv2.IMREAD_COLOR)\n",
+    "# List of image paths\n",
+    "image_paths = [\n",
+    "    'data/boards/black_board_difficult_corners.jpg',\n",
+    "    'data/boards/board_tilted.jpg',\n",
+    "    'data/checkerboards/checkerboard.jpg',\n",
+    "    'data/checkerboards/checkerboard_with_pieces_tilted.jpg',\n",
+    "    'data/chessboard/chessboard_with_pieces_tilted.jpg'\n",
+    "]\n",
+    "\n",
+    "for image_path in image_paths:\n",
+    "    # 1. Read the image\n",
+    "    image = cv2.imread(os.path.relpath(image_path), cv2.IMREAD_COLOR)\n",
+    "\n",
+    "    # 2. Convert the image to grayscale\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # 3. Apply Gaussian blur to reduce noise\n",
+    "    blurred = cv2.GaussianBlur(gray, (5, 5), 0)\n",
+    "\n",
+    "    # 4. Perform edge detection using the Canny edge detector\n",
+    "    edges = cv2.Canny(blurred, 50, 150)\n",
+    "\n",
+    "    # 5. Use the Hough Line Transform to detect lines\n",
+    "    lines = cv2.HoughLinesP(edges, rho=1, theta=np.pi/180, threshold=80, minLineLength=100, maxLineGap=30)\n",
+    "\n",
+    "    # Ensure lines are detected\n",
+    "    if lines is None:\n",
+    "        print(f\"No lines detected in {image_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # 6. Function to calculate slope of a line\n",
+    "    def calculate_slope(x1, y1, x2, y2):\n",
+    "        if x2 - x1 != 0:\n",
+    "            return (y2 - y1) / (x2 - x1)\n",
+    "        else:\n",
+    "            return np.inf  # Vertical lines have infinite slope\n",
+    "\n",
+    "    # 7. Group lines that are parallel by slope\n",
+    "    def group_parallel_lines(lines, slope_threshold=0.1):\n",
+    "        groups = []\n",
+    "        for line in lines:\n",
+    "            x1, y1, x2, y2 = line[0]\n",
+    "            slope = calculate_slope(x1, y1, x2, y2)\n",
+    "            added = False\n",
+    "            for group in groups:\n",
+    "                group_slope = calculate_slope(group[0][0], group[0][1], group[0][2], group[0][3])\n",
+    "                if abs(slope - group_slope) < slope_threshold:\n",
+    "                    group.append(line[0])\n",
+    "                    added = True\n",
+    "                    break\n",
+    "            if not added:\n",
+    "                groups.append([line[0]])\n",
+    "        return groups\n",
+    "\n",
+    "    # 8. Group parallel lines\n",
+    "    parallel_groups = group_parallel_lines(lines)\n",
+    "\n",
+    "    # 9. Display lines in different colors for each group\n",
+    "    grouped_image = image.copy()\n",
+    "    colors = []\n",
+    "\n",
+    "    # Generate random colors for each group\n",
+    "    for _ in range(len(parallel_groups)):\n",
+    "        colors.append([random.randint(0, 255), random.randint(0, 255), random.randint(0, 255)])\n",
+    "\n",
+    "    for i, group in enumerate(parallel_groups):\n",
+    "        for line in group:\n",
+    "            x1, y1, x2, y2 = line\n",
+    "            cv2.line(grouped_image, (x1, y1), (x2, y2), colors[i], thickness=4)\n",
+    "\n",
+    "    # 10. Function to find intersection points between two lines\n",
+    "    def line_intersection(line1, line2):\n",
+    "        xdiff = (line1[0] - line1[2], line2[0] - line2[2])\n",
+    "        ydiff = (line1[1] - line1[3], line2[1] - line2[3])\n",
+    "\n",
+    "        def det(a, b):\n",
+    "            return a[0] * b[1] - a[1] * b[0]\n",
+    "\n",
+    "        div = det(xdiff, ydiff)\n",
+    "        if div == 0:\n",
+    "            return None  # Parallel lines\n",
+    "\n",
+    "        d = (det((line1[0], line1[1]), (line1[2], line1[3])), \n",
+    "             det((line2[0], line2[1]), (line2[2], line2[3])))\n",
+    "        x = det(d, xdiff) / div\n",
+    "        y = det(d, ydiff) / div\n",
+    "        return int(x), int(y)\n",
+    "\n",
+    "    # 11. Find intersections between non-parallel lines only\n",
+    "    intersections = []\n",
+    "    for i, group1 in enumerate(parallel_groups):\n",
+    "        for line1 in group1:\n",
+    "            for j, group2 in enumerate(parallel_groups):\n",
+    "                if i != j:  # Avoid checking within the same group\n",
+    "                    for line2 in group2:\n",
+    "                        intersection = line_intersection(line1, line2)\n",
+    "                        if intersection:\n",
+    "                            intersections.append(intersection)\n",
+    "\n",
+    "    print(f\"Non-parallel intersections found in {image_path}: {len(intersections)}\")\n",
+    "\n",
+    "    # 12. Draw intersections as red dots on the original image\n",
+    "    intersections_image = image.copy()\n",
+    "    for intersection in intersections:\n",
+    "        cv2.circle(intersections_image, intersection, 5, (255, 0, 0), -1)  # Red for intersections\n",
+    "\n",
+    "    # 13. Display the result with intersections\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "    axs[0].imshow(cv2.cvtColor(grouped_image, cv2.COLOR_BGR2RGB))\n",
+    "    axs[0].set_title(f\"Parallel Line Groups - {os.path.basename(image_path)}\")\n",
+    "    axs[0].axis('off')\n",
+    "\n",
+    "    axs[1].imshow(cv2.cvtColor(intersections_image, cv2.COLOR_BGR2RGB))\n",
+    "    axs[1].set_title(f\"Non-Parallel Intersections - {os.path.basename(image_path)}\")\n",
+    "    axs[1].axis('off')\n",
+    "\n",
+    "\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hough lines\n",
+    "# Use findChessboardCorners with the correct numaber of internal corners to detect the corners of the chessboard\n",
+    "img = cv2.imread(os.path.relpath('data/boards/black_board_difficult_corners.jpg'), cv2.IMREAD_COLOR)\n",
     "image = cv2.imread(os.path.relpath('data/boards/board_tilted.jpg'), cv2.IMREAD_COLOR)\n",
+    "imag1 = cv2.imread(os.path.relpath('data/checkerboards/checkerboard.jpg'), cv2.IMREAD_COLOR)\n",
     "\n",
     "# 2. Convert the image to grayscale\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# 3. Apply Gaussian blur to reduce noise and detail (avoid detecting inner square corners)\n",
+    "# 3. Apply Gaussian blur to reduce noise\n",
     "blurred = cv2.GaussianBlur(gray, (5, 5), 0)\n",
     "\n",
     "# 4. Perform edge detection using the Canny edge detector\n",
@@ -44,55 +175,99 @@
     "# 5. Use the Hough Line Transform to detect straight lines\n",
     "lines = cv2.HoughLinesP(edges, rho=1, theta=np.pi/180, threshold=100, minLineLength=100, maxLineGap=10)\n",
     "\n",
-    "# Create a copy of the image to draw lines and corners\n",
-    "output = image.copy()\n",
+    "# Ensure that lines were found\n",
+    "if lines is None:\n",
+    "    print(\"No lines detected.\")\n",
+    "    exit()\n",
     "\n",
-    "# 6. Filter the lines to find the four outermost lines (this step requires some filtering heuristics)\n",
-    "# Group the lines by angle and position, and choose the four longest/most distinct lines\n",
-    "if lines is not None:\n",
-    "    for line in lines:\n",
-    "        x1, y1, x2, y2 = line[0]\n",
-    "        cv2.line(output, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "# 6. Initialize lists to store the horizontal and vertical lines\n",
+    "horizontal_lines = []\n",
+    "vertical_lines = []\n",
     "\n",
-    "# 7. Find the intersection points of the lines (the corners of the chessboard)\n",
+    "# 7. Sort lines into horizontal and vertical based on their angles (more relaxed filtering)\n",
+    "for line in lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    angle = math.degrees(math.atan2(y2 - y1, x2 - x1))\n",
+    "    \n",
+    "    # Horizontal lines are close to 0 degrees or 180 degrees\n",
+    "    if -20 < angle < 20 or 160 < angle < 200:\n",
+    "        horizontal_lines.append(line)\n",
+    "    # Vertical lines are close to 90 degrees\n",
+    "    elif 70 < angle < 110:\n",
+    "        vertical_lines.append(line)\n",
+    "\n",
+    "# Check if there are enough lines detected\n",
+    "if len(horizontal_lines) < 2 or len(vertical_lines) < 2:\n",
+    "    print(\"Not enough lines detected to form the chessboard.\")\n",
+    "    exit()\n",
+    "\n",
+    "# 8. Sort lines by their position to find the outermost lines for the perimeter\n",
+    "horizontal_lines = sorted(horizontal_lines, key=lambda line: line[0][1])\n",
+    "vertical_lines = sorted(vertical_lines, key=lambda line: line[0][0])\n",
+    "\n",
+    "# 9. Select the outermost lines for the perimeter\n",
+    "top_line = horizontal_lines[0]\n",
+    "bottom_line = horizontal_lines[-1]\n",
+    "left_line = vertical_lines[0]\n",
+    "right_line = vertical_lines[-1]\n",
+    "\n",
+    "# 10. Function to find the intersection point of two lines\n",
     "def line_intersection(line1, line2):\n",
-    "    \"\"\"Finds the intersection of two lines given in (x1, y1, x2, y2) form.\"\"\"\n",
-    "    xdiff = (line1[0] - line1[2], line2[0] - line2[2])\n",
-    "    ydiff = (line1[1] - line1[3], line2[1] - line2[3])\n",
+    "    xdiff = (line1[0][0] - line1[0][2], line2[0][0] - line2[0][2])\n",
+    "    ydiff = (line1[0][1] - line1[0][3], line2[0][1] - line2[0][3])\n",
     "\n",
     "    def det(a, b):\n",
     "        return a[0] * b[1] - a[1] * b[0]\n",
     "\n",
     "    div = det(xdiff, ydiff)\n",
     "    if div == 0:\n",
-    "       return None  # Lines do not intersect\n",
+    "        return None  # No intersection\n",
     "\n",
-    "    d = (det((line1[0], line1[1]), (line1[2], line1[3])), det((line2[0], line2[1]), (line2[2], line2[3])))\n",
+    "    d = (det((line1[0][0], line1[0][1]), (line1[0][2], line1[0][3])), \n",
+    "         det((line2[0][0], line2[0][1]), (line2[0][2], line2[0][3])))\n",
     "    x = det(d, xdiff) / div\n",
     "    y = det(d, ydiff) / div\n",
-    "    return x, y\n",
+    "    return int(x), int(y)\n",
     "\n",
-    "# Find intersections of the lines (assuming you identified the four key lines)\n",
-    "# corners = [line_intersection(line1, line2), ...]\n",
+    "# 11. Find the four corners of the chessboard\n",
+    "top_left = line_intersection(top_line, left_line)\n",
+    "top_right = line_intersection(top_line, right_line)\n",
+    "bottom_left = line_intersection(bottom_line, left_line)\n",
+    "bottom_right = line_intersection(bottom_line, right_line)\n",
     "\n",
-    "# 8. Draw the detected corners on the image and display the result\n",
-    "# Assuming corners is a list of 4 (x, y) points representing the corners of the chessboard\n",
-    "if corners:\n",
-    "    for corner in corners:\n",
-    "        cv2.circle(output, tuple(map(int, corner)), radius=5, color=(0, 0, 255), thickness=-1)\n",
+    "# Ensure intersections were found\n",
+    "if None in [top_left, top_right, bottom_left, bottom_right]:\n",
+    "    print(\"Unable to find intersections for the chessboard corners.\")\n",
+    "    exit()\n",
     "\n",
-    "# Display the result\n",
-    "plt.imshow(cv2.cvtColor(output, cv2.COLOR_BGR2RGB))\n",
-    "plt.title('Detected Chessboard Corners')\n",
-    "plt.show()"
+    "# 12. Draw green lines for the chessboard grid\n",
+    "for line in horizontal_lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    cv2.line(image, (x1, y1), (x2, y2), (0, 255, 0), 2)  # Green lines for grid\n",
+    "\n",
+    "for line in vertical_lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    cv2.line(image, (x1, y1), (x2, y2), (0, 255, 0), 2)  # Green lines for grid\n",
+    "\n",
+    "# 13. Draw blue lines around the perimeter of the chessboard\n",
+    "cv2.line(image, top_left, top_right, (255, 0, 0), 2)  # Blue perimeter\n",
+    "cv2.line(image, top_right, bottom_right, (255, 0, 0), 2)  # Blue perimeter\n",
+    "cv2.line(image, bottom_right, bottom_left, (255, 0, 0), 2)  # Blue perimeter\n",
+    "cv2.line(image, bottom_left, top_left, (255, 0, 0), 2)  # Blue perimeter\n",
+    "\n",
+    "# 14. Place green dots at the four corners\n",
+    "cv2.circle(image, top_left, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, top_right, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, bottom_left, 5, (0, 255, 0), -1)\n",
+    "cv2.circle(image, bottom_right, 5, (0, 255, 0), -1)\n",
+    "\n",
+    "# 15. Display the result using plt.imshow\n",
+    "plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# Turn into unit normal vectors and calcuate the corss product. For right angles, should be close to 1. For parallel, should be close to 0\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
