Checker Detection with HoughCircles

--- a/CheckerSegmentation6.ipynb
+++ b/CheckerSegmentation6.ipynb
@@ -86,7 +86,10 @@
     "\n",
     "checker_hist = cv2.calcHist([hsv_sample_checker], [0, 1], None, [180, 256], [0, 180, 0, 256])\n",
     "cv2.normalize(checker_hist, checker_hist, 0, 1, cv2.NORM_MINMAX)\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "#change\n"
    ]
   }
  ],
