--- a/chess_engine.ipynb
+++ b/chess_engine.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,7 @@
    "source": [
     "import chess\n",
     "import chess.engine\n",
+    "from stockfish import Stockfish\n",
     "\n",
     "def calculate_best_move(fen: str, stockfish_path: str) -> str:\n",
     "    \"\"\"\n",
@@ -74,7 +75,7 @@
     "# Example Usage\n",
     "if __name__ == \"__main__\":\n",
     "    # Provide the path to your Stockfish executable\n",
-    "    stockfish_path = \"stockfish\"\n",
+    "    stockfish_path = Stockfish(path=\"C:\\Users\\sachi\\OneDrive - University of Pittsburgh\\Desktop\\School Organization\\Class Files\\4 - Senior Year\\Fall 24\\ECE 1390\\ece1390-chessboard-image-processing\\stockfish\")\n",
     "\n",
     "    # Example FEN string (starting position)\n",
     "    initial_fen = \"rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1\"\n",
